src/test/ui/llvm-asm/issue-37433.stderr
error[E0669]: invalid value for constraint in inline assembly
  --> $DIR/issue-37433.rs:9:29
   |
LL |         llvm_asm!("" :: "r"(""));
   |                             ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0669`.
